Get all housings of a given owner ID (#17)
